# embedded_iot_smart_home

./: BUILD_PROMPT.md  CLAUDE.md  DASHBOARD_PROMPT.md  README.md  SPEC.md  TEST.md  _build_b_temp.bat  _build_b_temp.cmd  bf_log.txt  boot_capture.txt  build_a.bat  build_all.bat  build_all_log.txt  build_b.bat  build_b_log.txt  build_c.bat  build_c_log.txt  build_flash_a.bat  build_log.txt  flash_a.bat  flash_log.txt  serial_capture.txt  serial_capture2.txt  setup_esp_idf.ps1  verify_capture.txt
.claude/: settings.json  settings.local.json
common/: config.h  oled_ssd1306.c  oled_ssd1306.h  struct_message.h
flutter_app/: .flutter-plugins  README.md  pubspec.yaml
flutter_app/android/: build.gradle.kts
flutter_app/android/app/: build.gradle.kts
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/web/: index.html
node_a_central/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
node_a_central/main/: CMakeLists.txt  ble_gatt.c  ble_gatt.h  main.c
node_a_central/spiffs_data/: app.js  index.html  style.css
node_b_actuator/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
node_b_actuator/main/: CMakeLists.txt  cal_console.c  main.c  motor_ctrl.c  motor_ctrl.h
node_c_sensor_mock/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
node_c_sensor_mock/main/: CMakeLists.txt  dht11.c  dht11.h  main.c
scripts/: README.md  build_and_test_node_a.bat  build_and_test_node_b.bat  build_and_test_node_c.bat  run_with_idf.ps1
(+25 files in other folders)
