idf_component_register(
    SRCS
        "main.c"
        "motor_ctrl.c"
        "cal_console.c"
        "../../common/oled_ssd1306.c"
    INCLUDE_DIRS "." "../../common"
    PRIV_REQUIRES
        nvs_flash
        esp_wifi
        esp_hw_support
        esp_event
        esp_netif
        esp_timer
        driver
        esp_adc
        console
        vfs
)
